// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`myfares pages pointToPointProducts should render correctly when no products against service 1`] = `
<Fragment>
  <BaseLayout
    description="View and access your point to point products in one place."
    title="Point To Point Products - Create Fares Data Service"
  >
    <BackButton
      href="/products/services"
    />
    <div
      className="govuk-grid-row"
    >
      <div
        className="govuk-grid-column-full"
      >
        <h1
          className="govuk-heading-l govuk-!-margin-bottom-4"
          id="service-name"
        >
          1
           - 
          Leeds
           to 
          Manchester
        </h1>
        <h1
          className="govuk-heading-s govuk-!-margin-bottom-8"
          id="service-status"
        >
          Service status: 
          <strong
            className="govuk-tag govuk-tag--red"
          >
            Expired
          </strong>
        </h1>
        <h1
          className="govuk-heading-l govuk-!-margin-bottom-4"
        >
          Products
        </h1>
        <table
          className="govuk-table"
        >
          <thead
            className="govuk-table__head"
          >
            <tr
              className="govuk-table__row"
            >
              <th
                className="govuk-table__header"
                scope="col"
              >
                Product description
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                Time restriction
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                Start date
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                End date
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                Product status
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              />
              <th
                className="govuk-table__header"
                scope="col"
              />
            </tr>
          </thead>
          <tbody
            className="govuk-table__body"
          />
        </table>
        <span
          className="govuk-body"
        >
          <i>
            You currently have no products against this service
          </i>
        </span>
      </div>
    </div>
  </BaseLayout>
</Fragment>
`;

exports[`myfares pages pointToPointProducts should render correctly when products present against service and the product does not require attention 1`] = `
<Fragment>
  <BaseLayout
    description="View and access your point to point products in one place."
    title="Point To Point Products - Create Fares Data Service"
  >
    <BackButton
      href="/products/services"
    />
    <div
      className="govuk-grid-row"
    >
      <div
        className="govuk-grid-column-full"
      >
        <h1
          className="govuk-heading-l govuk-!-margin-bottom-4"
          id="service-name"
        >
          1
           - 
          Leeds
           to 
          Manchester
        </h1>
        <h1
          className="govuk-heading-s govuk-!-margin-bottom-8"
          id="service-status"
        >
          Service status: 
          <strong
            className="govuk-tag govuk-tag--red"
          >
            Expired
          </strong>
        </h1>
        <h1
          className="govuk-heading-l govuk-!-margin-bottom-4"
        >
          Products
        </h1>
        <table
          className="govuk-table"
        >
          <thead
            className="govuk-table__head"
          >
            <tr
              className="govuk-table__row"
            >
              <th
                className="govuk-table__header"
                scope="col"
              >
                Product description
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                Time restriction
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                Start date
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                End date
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                Product status
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              />
              <th
                className="govuk-table__header"
                scope="col"
              />
            </tr>
          </thead>
          <tbody
            className="govuk-table__body"
          >
            <tr
              className="govuk-table__row"
              key="0"
            >
              <td
                className="govuk-table__cell dft-table-wrap-anywhere dft-table-fixed-width-cell"
              >
                <a
                  href="/products/productDetails?productId=1&serviceId=01"
                  id="product-1"
                >
                  Adult - single
                </a>
              </td>
              <td
                className="govuk-table__cell dft-table-wrap-anywhere dft-table-fixed-width-cell"
              >
                Monday, Tuesday
              </td>
              <td
                className="govuk-table__cell"
              >
                05/04/2020
              </td>
              <td
                className="govuk-table__cell"
              >
                10/04/2020
              </td>
              <td
                className="govuk-table__cell"
              >
                <strong
                  className="govuk-tag govuk-tag--red dft-table-tag"
                >
                  Expired
                </strong>
              </td>
              <td
                className="govuk-table__cell"
              >
                <form>
                  <button
                    className="govuk-link govuk-body button-link"
                    formAction="/api/copyProduct?id=1&serviceId=01&_csrf="
                    formMethod="post"
                    id="copy-product-button"
                    type="submit"
                  >
                    Copy
                  </button>
                </form>
              </td>
              <td
                className="govuk-table__cell"
              >
                <button
                  className="govuk-link govuk-body button-link"
                  onClick={[Function]}
                >
                  Delete
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </BaseLayout>
</Fragment>
`;

exports[`myfares pages pointToPointProducts should render correctly when products present against service and the product requires attention 1`] = `
<Fragment>
  <BaseLayout
    description="View and access your point to point products in one place."
    title="Point To Point Products - Create Fares Data Service"
  >
    <BackButton
      href="/products/services"
    />
    <div
      className="govuk-warning-text"
    >
      <span
        aria-hidden="true"
        className="govuk-warning-text__icon govuk-!-margin-top-1"
      >
        !
      </span>
      <strong
        className="govuk-warning-text__text"
      >
        <span
          className="govuk-warning-text__assistive"
        >
          Warning
        </span>
        Your service has been updated in BODS. Stops have been added and/or removed since the creation of your product(s). These products will need updating to reflect these changes.
      </strong>
    </div>
    <div
      className="govuk-grid-row"
    >
      <div
        className="govuk-grid-column-full"
      >
        <h1
          className="govuk-heading-l govuk-!-margin-bottom-4"
          id="service-name"
        >
          1
           - 
          Leeds
           to 
          Manchester
        </h1>
        <h1
          className="govuk-heading-s govuk-!-margin-bottom-8"
          id="service-status"
        >
          Service status: 
          <strong
            className="govuk-tag govuk-tag--red"
          >
            Expired
          </strong>
        </h1>
        <h1
          className="govuk-heading-l govuk-!-margin-bottom-4"
        >
          Products
        </h1>
        <table
          className="govuk-table"
        >
          <thead
            className="govuk-table__head"
          >
            <tr
              className="govuk-table__row"
            >
              <th
                className="govuk-table__header"
                scope="col"
              >
                Product description
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                Time restriction
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                Start date
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                End date
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                Product status
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              />
              <th
                className="govuk-table__header"
                scope="col"
              />
            </tr>
          </thead>
          <tbody
            className="govuk-table__body"
          >
            <tr
              className="govuk-table__row"
              key="0"
            >
              <td
                className="govuk-table__cell dft-table-wrap-anywhere dft-table-fixed-width-cell"
              >
                <a
                  href="/products/productDetails?productId=1&serviceId=01"
                  id="product-1"
                >
                  Adult - single
                </a>
              </td>
              <td
                className="govuk-table__cell dft-table-wrap-anywhere dft-table-fixed-width-cell"
              >
                Monday, Tuesday
              </td>
              <td
                className="govuk-table__cell"
              >
                05/04/2020
              </td>
              <td
                className="govuk-table__cell"
              >
                10/04/2020
              </td>
              <td
                className="govuk-table__cell"
              >
                <strong
                  className="govuk-tag govuk-tag--red dft-table-tag"
                >
                  Expired
                </strong>
                <strong
                  className="govuk-tag govuk-tag--yellow dft-table-tag"
                >
                  NEEDS ATTENTION
                </strong>
              </td>
              <td
                className="govuk-table__cell"
              >
                <form>
                  <button
                    className="govuk-link govuk-body button-link"
                    formAction="/api/copyProduct?id=1&serviceId=01&_csrf="
                    formMethod="post"
                    id="copy-product-button"
                    type="submit"
                  >
                    Copy
                  </button>
                </form>
              </td>
              <td
                className="govuk-table__cell"
              >
                <button
                  className="govuk-link govuk-body button-link"
                  onClick={[Function]}
                >
                  Delete
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </BaseLayout>
</Fragment>
`;
